Refactored dat job interfaces - result endpoint changed is a separate commit
-changed openapi and stub implementations

Issue-ID: CPS-2360
