# dmi-service/src/main/java/org/onap/cps/ncmp/dmi/datajobs/rest/controller/DmiDatajobsRestController.java
@@ -34,13 +34,11 @@ public class DmiDatajobsRestController implements DmiDatajobApi {
     /**
      * This method is not implemented for ONAP DMI plugin.
      *
-     * @param requestId                Identifier for the overall Datajob (required)
      * @param subjobReadRequest        Operation body (optional)
      * @return (@ code ResponseEntity) Response entity
      */
     @Override
-    public ResponseEntity<Void> readDataJob(final String requestId,
-                                            final SubjobReadRequest subjobReadRequest) {
+    public ResponseEntity<Void> readDataJob(final String destination, final SubjobReadRequest subjobReadRequest) {
 
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
@@ -48,27 +46,23 @@ public class DmiDatajobsRestController implements DmiDatajobApi {
     /**
      * This method is not implemented for ONAP DMI plugin.
      *
-     * @param requestId                Identifier for the overall Datajob (required)
      * @param subjobWriteRequest       Operation body (optional)
      * @return (@ code ResponseEntity) Response entity
      */
     @Override
-    public ResponseEntity<Void> writeDataJob(final String requestId,
-                                             final SubjobWriteRequest subjobWriteRequest) {
+    public ResponseEntity<Void> writeDataJob(final String destination, final SubjobWriteRequest subjobWriteRequest) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
 
     /**
      * This method is not implemented for ONAP DMI plugin.
      *
-     * @param requestId             Identifier for the overall Datajob (required)
      * @param dataProducerJobId     Identifier for the data producer job (required)
-     * @param dataProducerId        Identifier for the data producer as a query parameter (required)
+     * @param dataProducerId        Identifier for the data producer (required)
      * @return ResponseEntity       Response entity indicating the method is not implemented
      */
     @Override
-    public ResponseEntity<Void> getDataJobStatus(final String requestId,
-                                                 final String dataProducerJobId,
+    public ResponseEntity<Void> getDataJobStatus(final String dataProducerJobId,
                                                  final String dataProducerId) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
     }
@@ -76,7 +70,6 @@ public class DmiDatajobsRestController implements DmiDatajobApi {
     /**
      * This method is not implemented for ONAP DMI plugin.
      *
-     * @param requestId             Identifier for the overall Datajob (required)
      * @param dataProducerJobId     Identifier for the data producer job (required)
      * @param dataProducerId        Identifier for the data producer as a query parameter (required)
      * @param destination           The destination of the results, Kafka topic name or s3 bucket name (required)
