# dmi-stub/dmi-plugin-demo-and-csit-stub-service/src/main/java/org/onap/cps/ncmp/dmi/rest/stub/controller/DmiRestStubController.java
@@ -264,14 +264,15 @@ public class DmiRestStubController {
     /**
      * Consume sub-job write requests from NCMP.
      *
-     * @param requestId                     requestId generated by NCMP as an ack for client.
      * @param subJobWriteRequest            contains a collection of write requests and metadata.
+     * @param destination                   the destination of the results. ( e.g. S3 Bucket).
      * @return (@ code ResponseEntity) response for the write request.
      */
-    @PostMapping("/v1/writeJob/{requestId}")
-    public ResponseEntity<SubjobWriteResponse> consumeWriteSubJobs(@PathVariable("requestId") final String requestId,
-                                                           @RequestBody final SubjobWriteRequest subJobWriteRequest) {
-        log.debug("Request ID: {}", requestId);
+    @PostMapping("/v1/cmwriteJob")
+    public ResponseEntity<SubjobWriteResponse> consumeWriteSubJobs(
+                                                        @RequestBody final SubjobWriteRequest subJobWriteRequest,
+                                                        @RequestParam("destination") final String destination) {
+        log.debug("Destination: {}", destination);
         log.debug("Request body: {}", subJobWriteRequest);
         return ResponseEntity.ok(new SubjobWriteResponse(String.valueOf(subJobWriteRequestCounter.incrementAndGet()),
                 "some-dmi-service-name", "my-data-producer-id"));
@@ -280,17 +281,18 @@ public class DmiRestStubController {
     /**
      * Retrieves the status of a given data job identified by {@code requestId} and {@code dataProducerJobId}.
      *
-     * @param requestId         Unique identifier for the outgoing request.
+     * @param dataProducerId    ID of the producer registered by DMI for the alternateIDs
+     *                          in the operations in this request.
      * @param dataProducerJobId Identifier of the data producer job.
      * @return A ResponseEntity with HTTP status 200 (OK) and the data job's status as a string.
      */
-    @GetMapping("/v1/dataJob/{requestId}/dataProducerJob/{dataProducerJobId}/status")
-    public ResponseEntity<String> retrieveDataJobStatus(
-            @PathVariable("requestId") final String requestId,
+    @GetMapping("/v1/cmwriteJob/dataProducer/{dataProducerId}/dataProducerJob/{dataProducerJobId}/status")
+    public ResponseEntity<Map<String, String>> retrieveDataJobStatus(
+            @PathVariable("dataProducerId") final String dataProducerId,
             @PathVariable("dataProducerJobId") final String dataProducerJobId) {
         log.info("Received request to retrieve data job status. Request ID: {}, Data Producer Job ID: {}",
-                requestId, dataProducerJobId);
-        return ResponseEntity.ok("FINISHED");
+                dataProducerId, dataProducerJobId);
+        return ResponseEntity.ok(Map.of("status", "FINISHED"));
     }
 
     /**
